feat: added FXMLKit and basic layout